# deposit

./: .gitignore  Broadcasts.py  Commander.py  DB.py  DLabel.py  DModule.py  File.py  Query.py  README.md  Server.py  Store.py  THIRDPARTY  THIRDPARTY.TXT  TODO.md  __init__.py  deposit-schema.rdf  list_count.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
commander/: ClassList.py  ClassesFrame.py  CmdDict.py  Commander.py  DatabaseList.py  Descriptor3DView.py  DescriptorModel.py  DescriptorView.py  DropActions.py  ExternalHeaderView.py  ExternalLstView.py  MainWindowModel.py  MainWindowView.py  MdiArea.py  Model.py  ModelActions.py  ObjectFrame.py  PrototypeExternalModel.py  PrototypeFrame.py  PrototypeList.py  PrototypeListModel.py  PrototypeTable.py  QueryComboBox.py  QueryGeoView.py  QueryImgView.py  QueryLstView.py  QueryModel.py  QueryObjView.py  QueryToolbar.py  QueryView.py  Registry.py  RelationsView.py  SaveWorker.py  ShapefileModel.py  ShapefileView.py  StatusBar.py  UserToolbar.py  View.py  ViewChild.py  XLSXWorkbookModel.py  (+1 more)
commander/dialogs/: About.py  AddClass.py  AddDescriptor.py  AddQuery.py  AddRelation.py  AddRelationVis.py  Connect.py  DataSource.py  EditQuery.py  Import.py  ImportDeposit.py  LinkDB.py  LoadDB.py  Open.py  OpenOrImport.py  RemoveClass.py  RemoveObject.py  RemoveObjectsFromClass.py  RemoveRelation.py  RenameClass.py  SaveAsDB.py  SaveAsDBRel.py  SetIdentifier.py  _Dialog.py  _Dialogs.py
commander/frames/: CSV.py  Class.py  ClassVis.py  Descriptor.py  GraphVisView.py  Query.py  Shapefile.py  XLSX.py  _Frame.py  __init__.py
commander/menu/: About.py  ClearLocalFolder.py  ClearRecent.py  Copy.py  History.py  LocaliseResources.py  Paste.py  SaveAs.py  SaveAsDB.py  SaveAsDBRel.py  SaveAsFile.py  SaveHistory.py  SetIdentifier.py  SetLocalFolder.py  _MRUDMenu.py  _Menu.py  _ordering.py
commander/navigator/: ClassList.py  ClassWidget.py  DatabaseList.py  DatabaseWidget.py  QueryList.py  QueryWidget.py  _Navigator.py
commander/plugins/: C14Form.py  C14Search.py  PrototypeForm.py  PrototypeFormModel.py  PrototypeImageForm.py  PrototypePlugin.py  PrototypePluginModel.py  _Plugin.py  _Plugins.py  _ordering.py
commander/toolbar/: AddClass.py  AddDescriptor.py  AddObject.py  AddRelation.py  ClassVis.py  Connect.py  Export.py  Import.py  ImportDeposit.py  Load.py  LoadExternal.py  New.py  (+9 more)
file/: CSV.py  Images.py  OBJ.py  Shapefiles.py  XLSX.py
store/: Classes.py  Conversions.py  Events.py  Files.py  Geometry.py  Geotags.py  Images.py  LinkedStore.py  Members.py  Namespaces.py  Objects.py  Observer.py  Projections.py  Queries.py  Queryfnc.py  Relations.py  Resources.py  Store.py  UserTools.py  Worldfiles.py
tests/: test_add_row.py  test_check_location.py  test_check_related.py  test_find_object_with_descriptors.py  test_get_paths.py  test_import_export.py  test_import_store.py  test_query.py  test_store.py  test_subgraph.py
(+192 files in other folders)
