[build-system]
requires = ["setuptools>=66.1.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deposit"
description = "Graph database for scientific data collection"
readme = "README.md"
requires-python = ">=3.10, <4"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
    {name = "Peter Demján", email = "peter.demjan@gmail.com"}
]
keywords = ["database", "graph"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows :: Windows 10"
]
dynamic = ["version"]
dependencies = [
		'natsort>=8.2.0, <9',
		'networkit>=10.0, <11',
		'networkx>=2.8.6, <3',
		'numpy>=1.9.0, <2',
		'openpyxl>=3.0.10, <4',
		'Pillow>=9.2.0, <10',
		'psycopg2>=2.9.3, <3',
		'pyshp>=2.3.1, <3',
		'PySide2>=5.15.2.1, <6',
		'Shapely>=1.8.4, <2',
		'Unidecode>=1.3.4, <2',
		'validators>=0.20.0, <2',
		'cryptography>=38.0.1, <39',
]

[project.urls]
homepage = "https://github.com/demjanp/deposit"

[tool.setuptools_scm]
write_to = "src/deposit/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

