[build-system]
requires = ["setuptools>=66.1.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deposit"
description = "Graph database for scientific data collection"
readme = "README.md"
requires-python = ">=3.10, <4"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
    {name = "Peter Demján", email = "peter.demjan@gmail.com"}
]
keywords = ["database", "graph"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows :: Windows 10"
]
dynamic = ["version"]
dependencies = [
	'certifi>=2024.6.2, <2025',
	'cryptography>=42.0.8, <43',
	'natsort>=8.4.0, <9',
	'networkit==11.0',
	'networkx>=3.3, <4',
	'numpy==1.22.0',		# required for PyInstaller in deposit_gui
	'openpyxl>=3.1.5, <4',
	'pandas==2.0.3',
	'Pillow>=10.4.0, <11',
	'psycopg2>=2.9.9, <3; sys_platform == "win32" or sys_platform == "linux" or sys_platform == "linux2"',
	'psycopg2-binary>=2.9.9, <3; sys_platform == "darwin"',
	'pyshp>=2.3.1, <3',
	'scipy==1.7.3',
	'Shapely==2.0.4, <3',
	'Unidecode>=1.3.8, <2',
	'validators>=0.29.0, <1',
]

[project.urls]
homepage = "https://github.com/demjanp/deposit"

[tool.setuptools_scm]
write_to = "src/deposit/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

